# parallel-taping-adjoint-ad

./: .gitignore  CMakeLists.txt  DEVELOPER_GUIDE.md  LICENSE  README.md  USER_GUIDE.md
doc/: Doxyfile.in
examples/burgers/: burgers.h  f.cpp  fd.cpp  gauss.h  utils.h
examples/example1/: example1.cpp  example1.hpp
examples/example2/: example2.cpp  example2.hpp
src/: aad.hpp  checkpoint.hpp  checkpointLoaderInterface.hpp  dag.hpp  double_o.hpp  main.cpp  profiler.hpp  verify.hpp
src/disk/: checkpointLoader.cpp  checkpointLoader.hpp
src/hybrid/: checkpointLoader.cpp  checkpointLoader.hpp
src/memory/: checkpointLoader.cpp  checkpointLoader.hpp
src/naive/: checkpointLoader.hpp
src/primal/: primal.cpp  primal.hpp
tests/src/: aad_test.hpp  checkpoint_test.hpp  dag_test.hpp  double_o_test.hpp  main.cpp
tests/src/test_function/: test_function.cpp  test_function.hpp
